--- a/app/src/main/res/layout/fragment_add_tracker_with_pin_code.xml
+++ b/app/src/main/res/layout/fragment_add_tracker_with_pin_code.xml
@@ -93,6 +93,19 @@
                     android:layout_weight="1"
                     android:text="@string/addTracker" />
 
+                <TextView
+                    android:visibility="@{viewModel.afterReg}"
+                    android:id="@+id/skipAddTracker"
+                    android:layout_width="match_parent"
+                    android:gravity="center"
+                    android:layout_height="32dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="8dp"
+                    android:clickable="true"
+                    android:text="@string/skip"
+                    android:textColor="#000"
+                    android:textSize="12sp" />
+
             </LinearLayout>
 
 
