--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -31,11 +31,11 @@
             android:orientation="vertical">
 
             <!--<TextView-->
-                <!--android:id="@+id/trackers"-->
-                <!--style="@style/AppTheme.widget.Button.Green"-->
-                <!--android:layout_gravity="center_horizontal"-->
-                <!--android:layout_marginTop="@dimen/button_margin_top"-->
-                <!--android:text="@string/trackers" />-->
+            <!--android:id="@+id/trackers"-->
+            <!--style="@style/AppTheme.widget.Button.Green"-->
+            <!--android:layout_gravity="center_horizontal"-->
+            <!--android:layout_marginTop="@dimen/button_margin_top"-->
+            <!--android:text="@string/trackers" />-->
 
             <TextView
                 android:id="@+id/connect"
@@ -49,7 +49,6 @@
                 style="@style/AppTheme.widget.Button.Green"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="@dimen/button_margin_top"
-
                 android:text="@string/geofence" />
 
             <TextView
@@ -57,7 +56,6 @@
                 style="@style/AppTheme.widget.Button.Green"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="@dimen/button_margin_top"
-
                 android:text="@string/profile" />
 
             <TextView
@@ -65,8 +63,14 @@
                 style="@style/AppTheme.widget.Button.Green"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="@dimen/button_margin_top"
-
                 android:text="@string/displayOptions" />
+
+            <TextView
+                android:id="@+id/pauseSubscription"
+                style="@style/AppTheme.widget.Button.Green"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="@dimen/button_margin_top"
+                android:text="@string/pauseSubscription" />
 
             <TextView
                 android:id="@+id/about"
