--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -62,21 +62,6 @@
                             app:twoWayText="@{viewModel.profile.username}" />
                     </android.support.design.widget.TextInputLayout>
 
-                    <android.support.design.widget.TextInputLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="16dp"
-                        app:error="@{viewModel.fullNameError}">
-
-                        <EditText
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:hint="@string/fullName"
-                            android:imeOptions="actionNext"
-                            android:inputType="textPersonName"
-                            android:singleLine="true"
-                            app:twoWayText="@{viewModel.profile.displayname}" />
-                    </android.support.design.widget.TextInputLayout>
 
                     <android.support.design.widget.TextInputLayout
                         android:layout_width="match_parent"
@@ -95,50 +80,22 @@
                             app:twoWayText="@{viewModel.profile.email}" />
                     </android.support.design.widget.TextInputLayout>
 
-                    <LinearLayout
+                    <android.support.design.widget.TextInputLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        app:error="@{viewModel.fullNameError}">
 
-                        <android.support.design.widget.TextInputLayout
-                            android:layout_width="72dp"
+                        <EditText
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="16dp"
-                            app:error="@{viewModel.phoneCodeError}">
+                            android:hint="@string/fullName"
+                            android:imeOptions="actionNext"
+                            android:inputType="textPersonName"
+                            android:singleLine="true"
+                            app:twoWayText="@{viewModel.profile.displayname}" />
+                    </android.support.design.widget.TextInputLayout>
 
-                            <EditText
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:hint="@string/code"
-                                android:imeOptions="actionNext"
-                                android:singleLine="true"
-                                android:maxLength="4"
-                                android:inputType="number"
-                                android:digits="0123456789+"
-                                android:text="+"
-                                app:twoWayText="@{viewModel.profile.phoneCode}" />
-                        </android.support.design.widget.TextInputLayout>
-
-
-                        <android.support.design.widget.TextInputLayout
-                            android:layout_width="0dp"
-                            android:layout_weight="1"
-                            android:layout_marginLeft="16dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="16dp"
-                            app:error="@{viewModel.phoneNumberError}">
-
-                            <EditText
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:hint="@string/phoneNumber"
-                                android:imeOptions="actionNext"
-                                android:singleLine="true"
-                                android:inputType="number"
-                                android:digits="0123456789"
-                                android:maxLength="10"
-                                app:twoWayText="@{viewModel.profile.phoneNumber}" />
-                        </android.support.design.widget.TextInputLayout>
-                    </LinearLayout>
 
                     <android.support.design.widget.TextInputLayout
                         android:layout_width="match_parent"
@@ -154,6 +111,23 @@
                             android:inputType="textPostalAddress"
                             android:singleLine="true"
                             app:twoWayText="@{viewModel.profile.address}" />
+                    </android.support.design.widget.TextInputLayout>
+
+
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        app:error="@{viewModel.zipCodeError}">
+
+                        <EditText
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/zipCode"
+                            android:imeOptions="actionNext"
+                            android:inputType="text"
+                            android:singleLine="true"
+                            app:twoWayText="@{viewModel.profile.zipCode}" />
                     </android.support.design.widget.TextInputLayout>
 
                     <android.support.design.widget.TextInputLayout
@@ -188,21 +162,66 @@
                             app:twoWayText="@{viewModel.profile.country}" />
                     </android.support.design.widget.TextInputLayout>
 
-                    <android.support.design.widget.TextInputLayout
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="16dp"
-                        app:error="@{viewModel.zipCodeError}">
+                        android:layout_height="wrap_content">
 
-                        <EditText
-                            android:layout_width="match_parent"
+                        <FrameLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content">
+                            <android.support.design.widget.TextInputLayout
+                                android:layout_width="72dp"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="16dp"
+                                app:error="@{viewModel.phoneCodeError}">
+
+                                <EditText
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:hint="@string/code"
+                                    android:imeOptions="actionNext"
+                                    android:singleLine="true"
+                                    android:maxLength="4"
+                                    android:inputType="number"
+                                    android:digits="0123456789"
+                                    android:paddingLeft="16dp"
+                                    app:twoWayText="@{viewModel.profile.phoneCode}" />
+                            </android.support.design.widget.TextInputLayout>
+
+                            <TextView
+                                android:layout_marginTop="12dp"
+                                android:layout_gravity="center_vertical"
+                                android:text="+"
+                                android:layout_marginLeft="4dp"
+                                android:textColor="@color/mainTextColor"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content" />
+                        </FrameLayout>
+
+
+                        <android.support.design.widget.TextInputLayout
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_marginLeft="16dp"
                             android:layout_height="wrap_content"
-                            android:hint="@string/zipCode"
-                            android:imeOptions="actionNext"
-                            android:inputType="text"
-                            android:singleLine="true"
-                            app:twoWayText="@{viewModel.profile.zipCode}" />
-                    </android.support.design.widget.TextInputLayout>
+                            android:layout_marginTop="16dp"
+                            app:error="@{viewModel.phoneNumberError}">
+
+                            <EditText
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:hint="@string/phoneNumber"
+                                android:imeOptions="actionDone"
+                                android:singleLine="true"
+                                android:inputType="number"
+                                android:digits="0123456789"
+                                android:maxLength="10"
+                                app:twoWayText="@{viewModel.profile.phoneNumber}" />
+                        </android.support.design.widget.TextInputLayout>
+                    </LinearLayout>
+
+
+
                 </LinearLayout>
 
                 <TextView
