--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -59,15 +59,33 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="16dp"
-                        app:error="@{viewModel.fullNameError}">
+                        app:error="@{viewModel.passwordError}">
 
                         <EditText
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:hint="@string/fullName"
+                            android:hint="@string/password"
+                            android:imeOptions="actionNext"
+                            android:inputType="textPassword"
+                            android:singleLine="true"
+                            app:twoWayText="@{viewModel.profile.password}" />
+                    </android.support.design.widget.TextInputLayout>
+
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        app:error="@{viewModel.passwordRepeatError}">
+
+                        <EditText
+                            android:id="@+id/passwordConfirm"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/confirmPassword"
+                            android:inputType="textPassword"
                             android:imeOptions="actionNext"
                             android:singleLine="true"
-                            app:twoWayText="@{viewModel.profile.displayname}" />
+                            app:twoWayText="@{viewModel.passwordRepeat}" />
                     </android.support.design.widget.TextInputLayout>
 
                     <android.support.design.widget.TextInputLayout
@@ -86,50 +104,20 @@
                             app:twoWayText="@{viewModel.profile.email}" />
                     </android.support.design.widget.TextInputLayout>
 
-                    <LinearLayout
+                    <android.support.design.widget.TextInputLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        app:error="@{viewModel.fullNameError}">
 
-                        <android.support.design.widget.TextInputLayout
-                            android:layout_width="72dp"
+                        <EditText
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="16dp"
-                            app:error="@{viewModel.phoneCodeError}">
-
-                            <EditText
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:hint="@string/code"
-                                android:imeOptions="actionNext"
-                                android:singleLine="true"
-                                android:maxLength="4"
-                                android:inputType="number"
-                                android:digits="0123456789+"
-                                android:text="+"
-                                app:twoWayText="@{viewModel.profile.phoneCode}" />
-                        </android.support.design.widget.TextInputLayout>
-
-
-                        <android.support.design.widget.TextInputLayout
-                            android:layout_width="0dp"
-                            android:layout_weight="1"
-                            android:layout_marginLeft="16dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="16dp"
-                            app:error="@{viewModel.phoneNumberError}">
-
-                            <EditText
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:hint="@string/phoneNumber"
-                                android:imeOptions="actionNext"
-                                android:singleLine="true"
-                                android:inputType="number"
-                                android:digits="0123456789"
-                                android:maxLength="10"
-                                app:twoWayText="@{viewModel.profile.phoneNumber}" />
-                        </android.support.design.widget.TextInputLayout>
-                    </LinearLayout>
+                            android:hint="@string/fullName"
+                            android:imeOptions="actionNext"
+                            android:singleLine="true"
+                            app:twoWayText="@{viewModel.profile.displayname}" />
+                    </android.support.design.widget.TextInputLayout>
 
                     <android.support.design.widget.TextInputLayout
                         android:layout_width="match_parent"
@@ -146,6 +134,23 @@
                             android:singleLine="true"
                             app:twoWayText="@{viewModel.profile.address}" />
                     </android.support.design.widget.TextInputLayout>
+
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        app:error="@{viewModel.zipCodeError}">
+
+                        <EditText
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/zipCode"
+                            android:imeOptions="actionNext"
+                            android:inputType="text"
+                            android:singleLine="true"
+                            app:twoWayText="@{viewModel.profile.zipCode}" />
+                    </android.support.design.widget.TextInputLayout>
+
 
                     <android.support.design.widget.TextInputLayout
                         android:layout_width="match_parent"
@@ -179,53 +184,67 @@
                             app:twoWayText="@{viewModel.profile.country}" />
                     </android.support.design.widget.TextInputLayout>
 
-                    <android.support.design.widget.TextInputLayout
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="16dp"
-                        app:error="@{viewModel.zipCodeError}">
+                        android:layout_height="wrap_content">
 
-                        <EditText
-                            android:layout_width="match_parent"
+                        <FrameLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content">
+                            <android.support.design.widget.TextInputLayout
+                                android:layout_width="72dp"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="16dp"
+
+                                app:error="@{viewModel.phoneCodeError}">
+
+                                <EditText
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:hint="@string/code"
+                                    android:imeOptions="actionNext"
+                                    android:singleLine="true"
+                                    android:maxLength="4"
+                                    android:inputType="number"
+                                    android:digits="0123456789"
+                                    android:paddingLeft="16dp"
+                                    app:twoWayText="@{viewModel.profile.phoneCode}" />
+                            </android.support.design.widget.TextInputLayout>
+
+                            <TextView
+                                android:layout_marginTop="12dp"
+                                android:layout_gravity="center_vertical"
+                                android:text="+"
+                                android:layout_marginLeft="4dp"
+                                android:textColor="@color/mainTextColor"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content" />
+                        </FrameLayout>
+
+
+
+                        <android.support.design.widget.TextInputLayout
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_marginLeft="16dp"
                             android:layout_height="wrap_content"
-                            android:hint="@string/zipCode"
-                            android:imeOptions="actionNext"
-                            android:inputType="text"
-                            android:singleLine="true"
-                            app:twoWayText="@{viewModel.profile.zipCode}" />
-                    </android.support.design.widget.TextInputLayout>
+                            android:layout_marginTop="16dp"
+                            app:error="@{viewModel.phoneNumberError}">
 
-                    <android.support.design.widget.TextInputLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="16dp"
-                        app:error="@{viewModel.passwordError}">
+                            <EditText
+                                android:id="@+id/phoneNumber"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:hint="@string/phoneNumber"
+                                android:imeOptions="actionDone"
+                                android:singleLine="true"
+                                android:inputType="number"
+                                android:digits="0123456789"
+                                android:maxLength="10"
+                                app:twoWayText="@{viewModel.profile.phoneNumber}" />
+                        </android.support.design.widget.TextInputLayout>
+                    </LinearLayout>
 
-                        <EditText
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:hint="@string/password"
-                            android:imeOptions="actionNext"
-                            android:inputType="textPassword"
-                            android:singleLine="true"
-                            app:twoWayText="@{viewModel.profile.password}" />
-                    </android.support.design.widget.TextInputLayout>
-
-                    <android.support.design.widget.TextInputLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="16dp"
-                        app:error="@{viewModel.passwordRepeatError}">
-
-                        <EditText
-                            android:id="@+id/passwordConfirm"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:hint="@string/confirmPassword"
-                            android:inputType="textPassword"
-                            android:singleLine="true"
-                            app:twoWayText="@{viewModel.passwordRepeat}" />
-                    </android.support.design.widget.TextInputLayout>
                 </LinearLayout>
 
                 <TextView
