--- a/app/src/main/res/layout/fragment_add_tracker_with_pin_code.xml
+++ b/app/src/main/res/layout/fragment_add_tracker_with_pin_code.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -10,7 +9,7 @@
             type="no.appsonite.gpsping.viewmodel.AddTrackerWithPinCodeViewModel" />
     </data>
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -25,7 +24,8 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_marginTop="?attr/actionBarSize">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -55,10 +55,10 @@
                         <EditText
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:digits="0123456789"
                             android:hint="@string/imeiNumber"
                             android:imeOptions="actionNext"
                             android:inputType="number"
-                            android:digits="0123456789"
                             android:singleLine="true"
                             app:twoWayText="@{viewModel.trackerIMEI}" />
                     </android.support.design.widget.TextInputLayout>
@@ -72,11 +72,11 @@
                         <EditText
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:digits="0123456789"
                             android:hint="@string/trackerLast4Digits"
                             android:imeOptions="actionNext"
-                            android:maxLength="4"
                             android:inputType="number"
-                            android:digits="0123456789"
+                            android:maxLength="4"
                             android:singleLine="true"
                             app:twoWayText="@{viewModel.trackerLast4DigitsOfNumber}" />
                     </android.support.design.widget.TextInputLayout>
@@ -94,22 +94,45 @@
                     android:text="@string/addTracker" />
 
                 <TextView
-                    android:visibility="@{viewModel.afterReg}"
                     android:id="@+id/skipAddTracker"
                     android:layout_width="match_parent"
-                    android:gravity="center"
                     android:layout_height="32dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="8dp"
                     android:clickable="true"
+                    android:gravity="center"
                     android:text="@string/skip"
                     android:textColor="#000"
-                    android:textSize="12sp" />
+                    android:textSize="12sp"
+                    android:visibility="@{viewModel.afterReg}" />
 
             </LinearLayout>
-
-
         </ScrollView>
-    </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/newTrackerHelp"
+            android:layout_width="match_parent"
+            android:layout_height="64dp"
+            android:layout_gravity="bottom"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            android:background="#a0ffffff">
+
+            <ImageView
+                android:layout_marginLeft="16dp"
+                android:layout_gravity="center_vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_add_new_help" />
+            <TextView
+                android:layout_marginLeft="24dp"
+                android:textSize="18sp"
+                android:layout_gravity="center"
+                android:text="@string/helpNewTracker"
+                android:textColor="@color/colorAccent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+    </FrameLayout>
 
 </layout>
