--- a/app/src/main/res/layout/fragment_add_tracker.xml
+++ b/app/src/main/res/layout/fragment_add_tracker.xml
@@ -163,6 +163,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:visibility="@{viewModel.visible}"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
