--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,5 +13,7 @@
     <color name="grey">#666666</color>
     <color name="black">#333333</color>
     <color name="green">#558A2E</color>
+    <color name="colorBackgroundNavigationBottom">#F8F8F8</color>
+    <color name="colorUnchecked">#A3A3A3</color>
 
 </resources>
